fix: fixed swager
